--- a/style.css
+++ b/style.css
@@ -1,23 +1,157 @@
 /* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 
-
-
 html, body {
-    overflow-x: hidden;
-    max-width: 100%;
     height: 100%;
-    /*white-space:nowrap;*/
+    white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+	white-space: -pre-wrap;      /* Opera 4-6 */
+	white-space: -o-pre-wrap;    /* Opera 7 */
+	white-space: pre-wrap;       /* css-3 */
+	word-wrap: break-word;       /* Internet Explorer 5.5+ */
+	white-space: normal;
+	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+	line-height: 150%;
 }
 
-a{
-	text-decoration: none;
-	color: inherit;
+nav select{
+	display: none;
+}
+.img-size{
+	height: 60%;
+	display: inline-block;
+	margin-right: 0.5em;
+}
+.hght-252{
+	height: 252px;
 }
 
-.line-separator{
-	height: 1px;
-	background: #717171;
-	width: 90%;
-	margin: 0 5%;
+
+.float-left{
+	float: left;
 }
+.dsply-blk{
+	display: block;
+	clear: both;
+}
+
+li{
+	list-style: disc inside;
+	display: list-item;
+}
+.mrgn-8{
+	margin: 1em;
+}
+
+.section-text{
+	position: relative;
+	top: 1em;
+	left: 1em;
+}
+
+h1{
+	font-size: 3em;
+	line-height: 2em;
+	font-weight: bold;
+	color: #259014;
+}
+.fnt-2{
+	font-size: 1.5em;
+	line-height: 1.25em;
+}
+.italic{
+	font-style: italic;
+}
+h2{
+	font-size: 1.5em;
+}
+.first-section{
+	background: url(images/healthy-body.jpg) no-repeat center center;
+	background-size: cover;
+	height: 40%;
+	width: 100%;
+	margin-top: -1em;
+}
+.button{
+	padding: .5em;
+	border-radius: .5em;
+	margin: .5em 0;
+	display: inline-block;
+	font-weight: bold;
+}
+	.button-grn{
+		background: #259014;
+		color: #fff;
+	}
+	.button-wht{
+		background: #fff;
+		color: #259014;
+	}
+
+.button:hover{
+	-webkit-box-shadow: inset 0px 0px 10px #175a0c;
+	-moz-box-shadow: 	inset 0px 0px 10px #175a0c;
+	box-shadow: 		inset 0px 0px 10px #175a0c;
+
+}	
+
+@media only screen and (max-width: 1136px) {
+
+  	nav a { 
+		display: none; 
+	}
+
+  	nav select { 
+  		display: block;
+  		margin: 1em;
+  		float: right; 
+  		height: 2em;
+  		width: 35%; 
+  		right: 0px;
+		top: 0px;
+		position: fixed;
+		z-index: 0;
+  	}
+
+  	#top-static{
+  		top: 0px;
+		position: fixed;
+		z-index: 0;
+		background: rgba(37, 144, 20, .8);
+		padding: 1em 0; 
+		width: 100%;
+  	}
+
+  	.mrgn-top{
+  		margin-top: 5em;
+  	}
+
+	.bkg-green{
+		background: #259014;
+		background-size: cover;
+		width: 100%;
+		color: #fff;
+	}
+	.img-size{
+		height: 80%;
+	}
+	.line-separator{
+	display: none;
+	}
+	.hght-200{
+		height: 40%;
+	}
+	
+	.first-section{
+		background: url(images/healthy-body.jpg) no-repeat center center;
+		background-size: cover;
+		height: 30%;
+		width: 100%;
+		margin-top: -1em;
+	}
+
+	body{
+		font-size: 80%;
+	}
+
+
+	}
