--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ h2{
 
 @media only screen and (max-width: 1136px) {
 
+	#logo{
+		width: 60%;
+	}
   	nav a { 
 		display: none; 
 	}
@@ -152,6 +155,12 @@ h2{
 	body{
 		font-size: 80%;
 	}
+		h1, .fnt-2{
+			font-size: 70%;
+		}
+		.fnt-2{
+
+		}
 
 
 	}
