--- a/style.css
+++ b/style.css
@@ -17,17 +17,24 @@ nav select{
 	display: none;
 }
 .img-size{
-	height: 252;
 	display: inline-block;
 	margin-right: 0.5em;
+	position: relative;
 }
-.hght-252{
+#logo{
+	margin: 0 1em;
+	position: relative;
+}
+
+.hght-200{
 	height: 252px;
 }
 
-
 .float-left{
 	float: left;
+}
+.float-right{
+	float: right;
 }
 .dsply-blk{
 	display: block;
@@ -46,11 +53,12 @@ li{
 	position: relative;
 	top: 1em;
 	left: 1em;
+	width: 90%;
 }
 
 h1{
-	font-size: 3em;
-	line-height: 1.5em;
+	font-size: 2.5em;
+	line-height: 1em;
 	font-weight: bold;
 	color: #259014;
 }
@@ -91,13 +99,14 @@ h2{
 	-webkit-box-shadow: inset 0px 0px 10px #175a0c;
 	-moz-box-shadow: 	inset 0px 0px 10px #175a0c;
 	box-shadow: 		inset 0px 0px 10px #175a0c;
-
 }	
 
-@media only screen and (max-width: 1136px) {
+
+
+@media only screen and (max-width: 1023px) {
 
 	#logo{
-		width: 60%;
+		height: 80%;
 	}
   	nav a { 
 		display: none; 
@@ -107,41 +116,33 @@ h2{
   		display: block;
   		margin: 1em;
   		float: right; 
-  		height: 2em;
-  		width: 35%; 
+  		height: 4em;
+  		width: 40%; 
   		right: 0px;
 		top: 0px;
-		position: fixed;
+		position: absolute;
 		z-index: 0;
   	}
 
   	#top-static{
   		top: 0px;
 		position: fixed;
-		z-index: 0;
+		z-index: 1;
 		background: rgba(37, 144, 20, .8);
 		padding: 1em 0; 
 		width: 100%;
+		height: 5%;
+  	}
+  	.img-size{
+  		width: 50%;
   	}
 
   	.mrgn-top{
-  		margin-top: 5em;
+  		margin-top: 6em;
   	}
 
-	.bkg-green{
-		background: #259014;
-		background-size: cover;
-		width: 100%;
-		color: #fff;
-	}
-	.img-size{
-		height: 80%;
-	}
-	.line-separator{
-	display: none;
-	}
 	.hght-200{
-		height: 40%;
+		height: 70%;
 	}
 	
 	.first-section{
@@ -155,12 +156,61 @@ h2{
 	body{
 		font-size: 80%;
 	}
-		h1, .fnt-2{
-			font-size: 70%;
-		}
-		.fnt-2{
-
-		}
-
 
 	}
+
+@media only screen and (min-width: 1024px) and (max-width: 1136px){
+	.img-size{
+  		width: 30%;
+  	}
+	#logo{
+		height: 80%;
+	}
+  	nav a { 
+		display: none; 
+	}
+
+  	nav select { 
+  		display: block;
+  		margin: 1em;
+  		float: right; 
+  		height: 4em;
+  		width: 40%; 
+  		right: 0px;
+		top: 0px;
+		position: absolute;
+		z-index: 0;
+  	}
+
+  	#top-static{
+  		top: 0px;
+		position: fixed;
+		z-index: 1;
+		background: rgba(37, 144, 20, .8);
+		padding: 1em 0; 
+		width: 100%;
+		height: 5%;
+  	}
+
+  	.mrgn-top{
+  		margin-top: 6em;
+  	}
+
+	.hght-200{
+		height: 45%;
+	}
+	
+	.first-section{
+		background: url(images/healthy-body.jpg) no-repeat center center;
+		background-size: cover;
+		height: 30%;
+		width: 100%;
+		margin-top: -1em;
+	}
+
+	body{
+		font-size: 90%;
+	}
+
+}
+
