--- a/style.css
+++ b/style.css
@@ -15,19 +15,6 @@ html, body {
 nav select{
 	display: none;
 }
-.img-size{
-	display: inline-block;
-	margin-right: 0.5em;
-	position: relative;
-}
-#logo{
-	margin: 1em;
-	position: relative;
-	background: url(images/fitlogo.png);
-	width: 288px;
-	height: 72px;
-	display: inline-block;
-}
 
 .hght-header{
 	height: 252px;
@@ -47,17 +34,24 @@ nav select{
 #topsection{
 	display: block;
 	position: relative;
-	height: 20.5em;
+	height: 40%;
+	/*height: 20.5em;*/
 	width: 100%;
+	margin: 0 1em 1em;
 }
-	#topimg{
+	#top-wrapper{
 		position: absolute;
+		width: inherit;
+	}
+	#topimg{
 		display: inline-block;
+		float: left;
 	}
 	#topinfo{
-		position: absolute;
 		display: inline-block;
-		left: 18.75em;
+		float: left;
+		position: absolute;
+		padding: 1em;
 	}
 
 li{
@@ -72,9 +66,6 @@ li{
 .section-text{
 	position: relative;
 	top: 1em;
-	/*left: 1em;
-	right: 1em;
-	width: 85%;*/
 	margin: 0 2.5%;
 	padding: 1em;
 	background: #259014;
@@ -158,10 +149,13 @@ h2{
 @media only screen and (max-width: 767px) {
 
 	#logo{
-		background: url(images/fitlogo.mobile.png);
-		height: 30px;
-		width: 120px;
+		background: url(images/fit-logo-wht.png) no-repeat;
+		background-size: auto 80%;
+		height: 90%;
+		width: 90%;
+		margin: 0 1em;
 	}
+
   	nav a { 
 		display: none; 
 	}
@@ -187,12 +181,13 @@ h2{
 		width: 100%;
 		height: 5%;
   	}
-  	.img-size{
-  		width: 50%;
-  	}
 
   	#topsection{
   		margin-top: 7%;
+  	}
+
+  	#topimg{
+  		width: 175px
   	}
 
 	.hght-header{
@@ -202,6 +197,7 @@ h2{
 	body{
 		font-size: 60%;
 	}
+
 	a.button{
 		display: none;
 	}
@@ -219,16 +215,21 @@ h2{
 	#img-stress{
 		background: url(images/yoga.jpg) no-repeat center center fixed;
 	}
+}	
 
-@media only screen and (min-width: 768px) and (max-width: 979px){
+@media only screen and (min-width: 768px) and (max-width: 920px){
 	.img-size{
   		width: 30%;
   	}
+
 	#logo{
-		background: url(images/fitlogo.mobile.png);
-		height: 30px;
-		width: 120px;
+		background: url(images/fit-logo-wht.png) no-repeat;
+		background-size: auto 95%;
+		height: 90%;
+		width: 90%;
+		margin: 0 1em;
 	}
+
   	nav a { 
 		display: none; 
 	}
@@ -259,6 +260,10 @@ h2{
   		margin-top: 7%;
   	}
 
+  	#topimg{
+  		width: 250px
+  	}
+
 	.hght-header{
 		height: 45%;
 	}
@@ -266,6 +271,7 @@ h2{
 	body{
 		font-size: 90%;
 	}
+
 	a.button{
 		display: none;
 	}
@@ -283,6 +289,5 @@ h2{
 	#img-stress{
 		background: url(images/yoga.jpg) no-repeat center center fixed;
 	}
-
 }
 
