line height for main text adjustment
tablet

--- a/style.css
+++ b/style.css
@@ -268,6 +268,10 @@ h2{
   	#topsection{
   		margin-top: 6em;
   	}
+		#topsection h1{
+			line-height: 1.75em;
+		}
+
 
   	#topimg{
   		width: 250px
